[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "click-type-test"
description = "Test that type annotations match click parameter types"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Stephen Rosen", email = "sirosen@globus.org" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["click>=8"]
dynamic = ["version"]

[project.urls]
source = "https://github.com/sirosen/click-type-test"

[tool.hatch.version]
path = "click_type_test.py"

[tool.hatch.build]
include = ["click_type_test.py"]

[tool.hatch.envs.default]
dependencies = ["pytest"]
[[tool.hatch.envs.default.matrix]]
python = ["3.10", "3.11", "3.12"]
[tool.hatch.envs.default.scripts]
test = "pytest -v"
